--- a/css/common.css
+++ b/css/common.css
@@ -35,7 +35,9 @@ footer,header,hgroup,menu,nav,section,summary {
 nav ul {
     list-style:none;
 }
-
+li{
+	list-style:none;
+}
 blockquote, q {
     quotes:none;
 }
@@ -54,6 +56,7 @@ a {
     vertical-align:baseline;
     background:transparent;
     text-decoration: none;
+    color: white;
 }
 
 ins {
