--- a/css/css.css
+++ b/css/css.css
@@ -2,3 +2,19 @@
 body{
 	background: #FFF url(../img/body_bg.png) repeat-x;
 }
+/**
+ * top顶部
+ */
+.top_menu{margin:0 auto;height:30px;}
+.top_menu {float: left;font-size: 13px;}
+.top_menu li{float: left; background: url(../img/top_ico.png) no-repeat right 14px;}
+.top_menu a{line-height:30px;padding-left: 18px;margin-right: 15px;color: #fef9f9;}
+.top_menu a:hover{color: blue;}
+.top_menu .no_dot{background:none}
+
+.top_bar{float: right;}
+.top_bar li{line-height:30px;float: left;height: 30px;color:#FFFFFF;font-weight: bold;font-size: 13px;}
+.top_bar .phone{background: url(../img/top_ico.png) no-repeat 8px -16px;padding:0 38px;}
+.top_bar .help{background: url(../img/top_ico.png) no-repeat 0 -46px;padding:0 38px;}
+.top_bar .space{margin-right:12px;}
+
