--- a/css/css.css
+++ b/css/css.css
@@ -32,30 +32,126 @@ body{
 .search .text{font-family: ; font-size:13px;position: absolute;top: 0;left: 20px; width:230px;height:31px;background:none;border: none;outline: none;}
 .search .btn{position: absolute; top:0;right:0;width:42px;height:31px;border: none;background: none;}
 /*
- 导航
+ 导航  background:url(../images/nav_active_bg.png)
  * */
-#nav{height: 36px;width:960px;margin:0 auto;padding-top: 8px;}
-#nav li{float: left;height: 28px;margin-right:2px;}
+#nav { width:960px; height:36px; padding-top:8px; margin:0 auto; }
+#nav li { float:left; height:28px; margin-right:2px; }
+#nav a { float:left; height:28px; text-decoration:none; color:#fff; font-size:15px; font-family:Arial; line-height:28px; cursor:pointer; }
+#nav strong { float:left; height:28px; font-weight:normal; }
+#nav span { float:left; height:28px; padding:0 16px; }
 
-#nav a{line-height:28px;float:left;height: 28px;padding: 0 16px;color: #FFFFFF;font-size: 15px; font-family: arial;font-weight: normal;}
-#nav strong{float: left;eight: 28px;}
-#nav span{float: left;eight: 28px;padding 0 16px}
+#nav a:hover{ background:url(../img/nav_active_bg.png) repeat-x 0 -56px; }
+#nav a:hover strong { background:url(../img/nav_active_bg.png) no-repeat; }
+#nav a:hover span { background:url(../img/nav_active_bg.png) no-repeat right -28px; }
+#nav .active a{ background:url(../img/nav_active_bg.png) repeat-x 0 -56px;}
+#nav .active strong{background:url(../img/nav_active_bg.png) no-repeat; }
+#nav .active span { background:url(../img/nav_active_bg.png) no-repeat right -28px; }
 
-#nav a:hover,#nav .active a{background: url(../img/nav_active_bg.png) repeat-x 0 -56px;}
-#nav a:hover strong,#nav .avitve strong{background: url(../img/nav_active_bg.png) no-repeat;}
-#nav a:hover span,#nav .active span{background: url(../img/nav_active_bg.png) no-repeat right -28px;}
 
 /**
  * 主体内容 头部
  */
 #content{width: 1000px;margin:24px auto 0;background: url(../img/content_bg.png) repeat-y -1000px 0;}
 #content_top{width: 1000px;background: url(../img/content_bg.png) no-repeat;}
-#content_bottom{width: 1000px;background:url(../img/content_bg.png) no-repeat -2000px bottom;}
+#content_bottom{width: 1000px;background:url(../img/content_bg.png) no-repeat -2000px bottom;padding-top:10px;}
 
-#ad{width:940px;height:300px;margin:0 auto;position: relative;top:10px;},
+#ad{width:940px;height:300px;margin:0 auto;position: relative;},
 #ad ul{position: absolute;top:0;left: 0;}
 #ad li{position: absolute;top:0;left: 0;}
 #ad h2{width:268px;text-align:center;color:#ffc600;font-size:25px;position: absolute;left: 0;bottom: 16px;z-index: 3;}
 #ad p{position: absolute;left:268px;bottom: 7px;z-index: 3;font-size: 13px;color: #FFFFFF;line-height: 16px;width: 630px;}
 #ad .bg{z-index:2;width:940px;height: 52px;background:#000000 ;filter: alpha(opacity:80);opacity: 0.8;position: absolute;bottom: 0;left: 0;}
+/*头部下方*/
+#main{
+	width:942px;margin: 0 auto;
+	margin-top: 30px;
+}
+#main .side{width: 210px;float: left;}
+#main .wrap{width: 706px;float: right;}
+
+/*清楚浮动*/
+.clear{zoom:1}
+.clear:after{
+	content:'';
+	display: block;
+	clear: both;
+}
+/*菜单模块*/
+ .module_menu{margin-bottom: 12px;}
+.module_menu h2{margin-bottom: 1px;height: 29px;background: url(../img/module_menu_bg.gif) repeat-x 0 -58px;font-size: 15px;font-family: arial;text-align: center;line-height: 28px;color: #ffffff;}
+.module_menu strong{display: block; height: 29px; background: url(../img/module_menu_bg.gif) no-repeat;}
+.module_menu span{display:block;height: 29px;background: url(../img/module_menu_bg.gif) no-repeat right -29px;}
+
+ .list{background: url(../img/list_bg.gif) repeat-y;}
+.list ul{background: url(../img/list_bg.gif) no-repeat -210px bottom;padding-top: 18px;padding-bottom:15px;padding:18px 8px 15px}
+.list li{}
+.list a{font-size:12px;font-weight:bold;padding-left:32px;border-bottom:1px solid #FFFFFF;height: 27px;display: block;line-height: 27px;color: #434343;}
+.list a:hover{border-bottom-color:#b20e00 ;color: #b20e00;background: #FFC600;}
+
+/*联系我们模块*/
+.module_join{width: 210px;background: url(../img/list_bg.gif) repeat-y -630px 0;}
+.module_join_t{background: url(../img/list_bg.gif)no-repeat -420px 0;}
+.module_join_b{background: url(../img/list_bg.gif)no-repeat -840px bottom;} 
+
+.join_form{width: 180px;margin:  0 auto 12px;}
+.join_form p{font-size: 15px;color: #666;line-height: 18px;margin-bottom: 8px;padding-top: 12px;}
+.join_form .text{width: 175px;height:25px;margin-bottom: 6px;
+line-height: 25px;background: #FFFFFF;border:1px solid ##FFFFFF;border-top: 1px solid #9c9c9c;border-left: 1px solid #c0c0c0;}
+.join_form .btn{margin:0 auto;display:block;height:25px;width:88px;background: url(../img/join_now.png)no-repeat;font-size: 15px;font-weight: bold;border: 0;color: #FFFFFF;}
+.join_list {background: url(../img/shopping_bg.gif) no-repeat 10px;width: 192px;margin:  0 auto;}
+.join_list li{border-top: 1px solid #FFFFFF;padding-left: 62px;}
+.space1{height: 45px;font-size: 13px;color: #434343;line-height: 45px;}
+.space2{height: 43px;font-size: 13px;color: #434343;padding-top: 5px;line-height: 18px;}
+.space3{height: 45px;font-size: 13px;color: #434343;padding-top: 5px;line-height: 18px;}
+/*支付方式*/
+#payment{margin: 33px 0 0 18px;}
+.sort{height:20px;}
+.sort dl{float: left;}
+.sort dt{float: left;color:#74747;font-weight: bold;font-size: 12px;padding-right: 2px;}
+.sort dd{position: relative;width: 109px;height: 19px;float: left;margin-right: 12px;}
+.sort h2{width: 108px;height: 17px; border:1px solid #CCCCCC;
+font-size:12px;color: #747474;font-weight: normal;text-indent: 5px;}
+.sort ul{width: 108px;border: 1px solid #CCCCCC;background: #FFFFFF;position: absolute;top: 18px; left: 0;z-index:1;display: none;}
+.sort li{font-size: 12px;line-height: 20px;text-indent: 5px;cursor: pointer;}
+.sort .active{background: green; color: #FFFFFF;}
+.sort a{z-index:2;width: 19px;height: 19px;position: absolute;top: 0;left: 90px;background: url(../img/shopping_bg.png) no-repeat 0 -376px;}
+.sort a:hover{background: url(../img/shopping_bg.png) no-repeat -19px -376px;}
+.sort p{float: right;color: #747474;font-size: 12px;}
+.sort p strong{color: #999;}
+.sort p span{padding: 0 5px;}
+.color_style{color: #b20e00;}
+/*产品列表*/
+.pro_list{width: 706px;overflow: hidden;}
+.pro_list h2,#scroll_list h2{font-size: 18px;color: #666666;height: 56px;line-height: 56px;}
+.pro_list ul{width: 736px;}
+.pro_list li{float: left;width: 182px;height: 200px;}
+.pro_list a{margin-bottom:7px ; display: block; width:154px;height: 114px;border: 1px solid #c6c6c6;}
+.pro_list a:hover{border: 1px solid #663;}
+.pro_list h3{color: #666;font-size: 15px;line-height: 16px;}
+.pro_list p{color: #333;font-size: 13px;line-height: 16px;}
+.pro_list span{color: #B20E00;font-size: 13px;}
+
+.page{text-align: center;border-bottom: 1px solid #cdcdc8;padding-bottom: 5px;}
+.page a{display: inline-block;height: 20px;color: #B20E00;padding: 0 6px;}
+.page a:hover,.page .active{color: #FFFFFF;background: #B20E00;}
+
+/*scroll_list*/
+.scroll_wrap{height: 196px;background: url(../img/scroll_bg.gif) repeat-x 0 -478px ;}
+.scroll_wrap_l{height: 196px;background: url(../img/scroll_bg.gif) no-repeat 0 -86px;}
+.scroll_wrap_r{height: 196px;background: url(../img/scroll_bg.gif) no-repeat right -282px;position: relative;}
+.prev,.next{height: 43px;width: 35px;display: block;position: absolute;top:70px}
+.prev{left:0;background: url(../img/scroll_bg.gif) no-repeat;}
+.next{right:0;background: url(../img/scroll_bg.gif) no-repeat 0 -43px;}
+.list_wrap{width: 615px; margin:  0 auto;padding-top: 32px;}
+.list_wrap ul{height: 150px;}
+.list_wrap li{width: 205px;float: left;}
+.list_wrap a{display: block; height: 100px;}
+.list_wrap a,.list_wrap p{width: 145px;margin:  0 auto;}
+.list_wrap p{font-size: 12px; color: #600;text-align: center;line-height: 14px;padding-top: 10px;}
+/*footer*/
+#footer{background: url(../img/footer_bg.png) repeat-x; height: 61px;}
+.icon1,.icon2{height: 61px;float: left;font-size: 14px;color: #cbcbcb;}
+.icon1{background: url(../img/footer_info.png) no-repeat ;}
+.icon2{background: url(../img/footer_info.png) no-repeat 0 -53px;}
+
 
