--- a/css/css.css
+++ b/css/css.css
@@ -20,7 +20,7 @@ body{
 /**
  * 头部 head
  */
-#header{width:960px;height: 100px;margin:0 auto;position: relative;background: url(../img/h1_bg.png)no-repeat;}
+#header{width:960px;height: 100px;margin:0 auto;position: relative;background: url(../img/header_bg.png)no-repeat;}
 #header #shopping{width: 260px;height: 100px;background: url(../img/shopping_bg.png) no-repeat;}
 
 #shopping p{font-size: 20px;color: #FFFFFF;font-family: "Arial";padding:26px 0 0 84px;}
@@ -149,9 +149,17 @@ font-size:12px;color: #747474;font-weight: normal;text-indent: 5px;}
 .list_wrap a,.list_wrap p{width: 145px;margin:  0 auto;}
 .list_wrap p{font-size: 12px; color: #600;text-align: center;line-height: 14px;padding-top: 10px;}
 /*footer*/
-#footer{background: url(../img/footer_bg.png) repeat-x; height: 61px;}
-.icon1,.icon2{height: 61px;float: left;font-size: 14px;color: #cbcbcb;}
+#footer{background: url(../img/footer_bg.png) repeat-x; height: 302px;}
+#footer_info{width: 940px;margin:  0 auto;height: 61px;position: relative;}
+.icon1,.icon2{height: 61px;float: left;font-size: 14px;color: #cbcbcb;text-indent: 60px;margin-right: 25px;line-height: 61px;}
 .icon1{background: url(../img/footer_info.png) no-repeat ;}
 .icon2{background: url(../img/footer_info.png) no-repeat 0 -53px;}
+#footer_info .search{position: absolute;top:15px;right: -10px;}
+#footer_link{width: 940px;margin: 0 auto; padding-top: 20px;}
+#footer_link dl{float: left;width:188px ;}
+#footer_link dt{padding: 27px 0 27px 0;font-size: 15px;font-weight: bold;color: #FFFFFF;}
+#footer_link dd a{color: #cfcfcf;font-size: 13px;line-height:20px ;}
+#footer_link span{color: #ffcc00;}
+#footer_link .space{padding-top: 20px;}
 
 
